--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body { margin: 0; font-family: 'Poppins', sans-serif; background: var(--bg); col
 .card-container {
     position: relative;
     padding: 25px;
-    background-image: url('Test.jpg'); 
+    background-image: url('test.jpg'); 
     background-size: cover;
     background-position: center;
     border-radius: 45px;
@@ -244,3 +244,4 @@ const firebaseConfig = {
 </script>
 </body>
 </html>
+
