Change birthday message from Vathanakvann Rin to Sreynith Ra

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Happy Birthday Vathanakvann Rin! 🎂 🎈</title>
+<title>Happy Birthday Sreynith Ra! 🎂 🎈</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 
@@ -88,7 +88,7 @@ input[type=range] { accent-color: var(--primary); cursor: pointer; }
 
 <div id="giftScreen" onclick="openGift()">
     <div class="gift">🎁</div>
-    <p>A gift for <b>Vathanakvann Rin</b></p>
+    <p>A gift for <b>Sreynith Ra</b></p>
     <p style="font-size: 12px; opacity: 0.6; margin-top: 5px;">(Tap to Open)</p>
 </div>
 
@@ -100,7 +100,7 @@ input[type=range] { accent-color: var(--primary); cursor: pointer; }
           <div id="cake">🎂</div>
         </div>
         <h1>Happy Birthday</h1>
-        <h2>Vathanakvann Rin</h2>
+        <h2>Sreynith Ra</h2>
         
         <div id="wishMessage" class="wishing-text">
             <p style="font-size: 1rem;">"Wishing you the happiest of birthdays and an incredible year ahead!"</p>
@@ -243,5 +243,6 @@ const firebaseConfig = {
 </script>
 </body>
 </html>
+
 
 
