--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ input[type=range] { accent-color: var(--primary); cursor: pointer; }
         </div>
         <h1>Happy Birthday</h1>
         <h2>Sreynith Ra</h2>
-        
+    <h2>Happy Birthday! May your special day be filled with gentle smiles, warm laughter, and beautiful moments that stay in your heart forever. I wish you happiness, good health, and endless reasons to smile in the year ahead.</h2>
+
         <div id="wishMessage" class="wishing-text">
             <p style="font-size: 1rem;">"Wishing you the happiest of birthdays and an incredible year ahead!"</p>
             <p style="color: var(--primary); font-family: 'Dancing Script'; font-size: 1.4rem; margin-top: 10px;">— Pop the balloons! 🎈</p>
@@ -223,6 +224,7 @@ input[type=range] { accent-color: var(--primary); cursor: pointer; }
 </script>
 </body>
 </html>
+
 
 
 
